<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BotonTareas1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_tareas1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/BotonTareas2"
        app:layout_constraintEnd_toEndOf="@+id/BotonTareas2" />

    <Button
        android:id="@+id/BotonTareas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="246dp"
        android:text="@string/btn_tareas2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/BotonLogros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BotonCrearTareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="26dp"
        android:text="@string/btn_nueva_tareas"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/BotonTareas2"
        app:layout_constraintTop_toBottomOf="@+id/BotonTareas2" />

    <Button
        android:id="@+id/BotonHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="34dp"
        android:text="@string/btn_historial"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/BotonLogros"
        app:layout_constraintStart_toStartOf="@+id/BotonCrearTareas" />

    <Button
        android:id="@+id/BotonLogros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="42dp"
        android:text="@string/btn_logros"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/BotonProgreso"
        app:layout_constraintStart_toStartOf="@+id/BotonHistorial" />

    <Button
        android:id="@+id/BotonProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:text="@string/btn_progreso"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fragmentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>